--- a/Photoshop.csproj
+++ b/Photoshop.csproj
@@ -39,12 +39,15 @@
   <ItemGroup>
     <Compile Include="Data\Pixel.cs" />
     <Compile Include="Filters\EmptyParametrs.cs" />
-    <Compile Include="Filters\GrayscaleFilter.cs" />
     <Compile Include="Filters\IParameters.cs" />
     <Compile Include="Filters\LighteningParametrs.cs" />
     <Compile Include="Filters\ParameterInfo.cs" />
     <Compile Include="Filters\ParametrizedFilter.cs" />
     <Compile Include="Filters\PixelFilter.cs" />
+    <Compile Include="Filters\Transform\ITransformer.cs" />
+    <Compile Include="Filters\Transform\RotateTransformer.cs" />
+    <Compile Include="Filters\Transform\RotationParameters.cs" />
+    <Compile Include="Filters\Transform\TransformFilter.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Window\MainWindow.cs">
       <SubType>Form</SubType>
@@ -52,7 +55,6 @@
     <Compile Include="Data\Photo.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Data\Convertors.cs" />
-    <Compile Include="Filters\LighteningFilter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -63,4 +65,5 @@
   <ItemGroup>
     <Content Include="Tasks.txt" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
