--- a/Photoshop.csproj
+++ b/Photoshop.csproj
@@ -44,10 +44,12 @@
     <Compile Include="Filters\ParameterInfo.cs" />
     <Compile Include="Filters\ParametrizedFilter.cs" />
     <Compile Include="Filters\PixelFilter.cs" />
+    <Compile Include="Filters\Transform\FreeTransformer.cs" />
     <Compile Include="Filters\Transform\ITransformer.cs" />
     <Compile Include="Filters\Transform\RotateTransformer.cs" />
     <Compile Include="Filters\Transform\RotationParameters.cs" />
     <Compile Include="Filters\Transform\TransformFilter.cs" />
+    <Compile Include="Filters\Transform\TransformFilter%28TParameters%29.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Window\MainWindow.cs">
       <SubType>Form</SubType>
