--- a/Photoshop.csproj
+++ b/Photoshop.csproj
@@ -39,10 +39,12 @@
   <ItemGroup>
     <Compile Include="Data\Pixel.cs" />
     <Compile Include="Filters\EmptyParametrs.cs" />
-    <Compile Include="Filters\IParameters.cs" />
+    <Compile Include="Filters\Parameters\IParameters.cs" />
     <Compile Include="Filters\LighteningParametrs.cs" />
-    <Compile Include="Filters\ParameterInfo.cs" />
-    <Compile Include="Filters\ParametrizedFilter.cs" />
+    <Compile Include="Filters\Parameters\IParametersHandler.cs" />
+    <Compile Include="Filters\Parameters\ParameterInfo.cs" />
+    <Compile Include="Filters\Parameters\ParametrizedFilter.cs" />
+    <Compile Include="Filters\Parameters\SimpleParametersHandler.cs" />
     <Compile Include="Filters\PixelFilter.cs" />
     <Compile Include="Filters\Transform\FreeTransformer.cs" />
     <Compile Include="Filters\Transform\ITransformer.cs" />
